[project]
name = "acme-api"
version = "0.1.0"
description = "API ACME con FastAPI"
authors = [
    {name = "Tu Nombre", email = "tu@email.com"},
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "httpx>=0.27.0",
]
requires-python = ">=3.8"
readme = "README.md"

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "coverage>=7.4.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=xml --junitxml=junit.xml"
pythonpath = "."

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

